--- a/frontend/public/locales/af/translation.json
+++ b/frontend/public/locales/af/translation.json
@@ -1,25 +1,41 @@
 {
   "welcome": "Welkom by Apex Digital",
-  "services": "Ons Dienste",
+  "services": "Dienste",
   "webDesign": "Webontwerp",
   "landingPages": "Bestemmingsbladsye",
-  "ecommerce": "E‑handel",
+  "ecommerce": "E-handel",
   "cart": "Mandjie",
   "dashboard": "Paneelbord",
   "login": "Teken aan",
   "register": "Registreer",
-  "logout": "Teken uit"
-}
-{
-  "connect_account": "Connect Account",
-  "disconnect": "Disconnect",
-  "social_accounts": "Social Accounts",
-  "ab_tests": "A/B Tests",
-  "new_test": "New Test",
+  "logout": "Teken uit",
+  "social_accounts": "Sosiale Rekeninge",
+  "connect_accounts_desc": "Koppel jou sosiale media rekeninge om direk vanaf Apex Digital te plaas.",
+  "connect": "Koppel",
+  "connecting": "Besig om te koppel...",
+  "disconnect": "Ontkoppel",
+  "confirm_disconnect": "Is jy seker jy wil hierdie rekening ontkoppel?",
+  "disconnected": "Rekening suksesvol ontkoppel",
+  "disconnect_failed": "Ontkoppeling misluk",
+  "refresh_token": "Hernou teken",
+  "token_refreshed": "Teken suksesvol hernu",
+  "refresh_failed": "Hernuwing misluk",
+  "connect_another": "Koppel nog een",
+  "connected_summary": "Jou Gekoppelde Rekeninge",
+  "total_connected": "Totaal gekoppel: {{count}}",
+  "fetch_failed": "Kon nie rekeninge laai nie",
+  "connect_failed": "Kon nie koppel nie",
+  "loading": "Laai...",
+  "ab_tests": "A/B Toetse",
+  "new_test": "Nuwe Toets",
   "variant": "Variant",
-  "schedule_post": "Schedule Post",
-  "post_now": "Post Now",
-  "audience_size": "Audience Size",
-  "start_test": "Start Test",
-  "view_results": "View Results"
+  "schedule_post": "Skeduleer Plasing",
+  "post_now": "Plaas Nou",
+  "audience_size": "Gehoor Grootte",
+  "start_test": "Begin Toets",
+  "view_results": "Bekyk Resultate",
+  "create_test": "Skep Toets",
+  "test_name": "Toets Naam",
+  "platforms": "Platforms",
+  "variants": "Variante"
 }
