--- a/frontend/public/locales/zu/translation.json
+++ b/frontend/public/locales/zu/translation.json
@@ -3,10 +3,39 @@
   "services": "Izinsiza Zethu",
   "webDesign": "Umklamo Wewebhu",
   "landingPages": "Amakhasi Okufika",
-  "ecommerce": "E‑commerce",
+  "ecommerce": "E-commerce",
   "cart": "Inqola",
   "dashboard": "Ideshibhodi",
   "login": "Ngena",
   "register": "Bhalisa",
-  "logout": "Phuma"
+  "logout": "Phuma",
+  "social_accounts": "Ama-akhawunti Ezokuxhumana",
+  "connect_accounts_desc": "Xhuma ama-akhawunti akho ezokuxhumana ukuze uthumele ngqo kusukela ku-Apex Digital.",
+  "connect": "Xhuma",
+  "connecting": "Iyaxhuma...",
+  "disconnect": "Nqamula",
+  "confirm_disconnect": "Uqinisekile ufisa ukunqamula le akhawunti?",
+  "disconnected": "I-akhawunti inqanyuliwe ngempumelelo",
+  "disconnect_failed": "Ukunqamula kwehlulekile",
+  "refresh_token": "Vuselela ithokheni",
+  "token_refreshed": "Ithokheni ivuselelwe ngempumelelo",
+  "refresh_failed": "Ukwenza kabusha kwehlulekile",
+  "connect_another": "Xhuma enye",
+  "connected_summary": "Ama-akhawunti Akho Axhunyiwe",
+  "total_connected": "Isamba esixhunyiwe: {{count}}",
+  "fetch_failed": "Ukulanda ama-akhawunti kwehlulekile",
+  "connect_failed": "Ukuxhuma kwehlulekile",
+  "loading": "Iyalayisha...",
+  "ab_tests": "Ukuhlola A/B",
+  "new_test": "Ukuhlola Okusha",
+  "variant": "Okuhlukile",
+  "schedule_post": "Hlela Ukuthumela",
+  "post_now": "Thumela Manje",
+  "audience_size": "Ubukhulu Bezithameli",
+  "start_test": "Qala Ukuhlola",
+  "view_results": "Buka Imiphumela",
+  "create_test": "Dala Ukuhlola",
+  "test_name": "Igama Lokuhlola",
+  "platforms": "Amaplatifomu",
+  "variants": "Okuhlukile"
 }
